--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,12 +1,8 @@
-<div class="container">
-    <app-header></app-header>
-</div>
 <header class="main-header">
     <h1 class="main-header__title">
           <span class="main-header__title--blue"> Kelvin</span><span class="main-header__title--orange">Evolution</span>
-  
       </h1>
-      <div class="container-menu">
+      <div class=".container-menu">
       <nav class="main-header__menu">
           <ul>
               <li>
@@ -14,10 +10,10 @@
               </li>
               <li>
                   <a>
-                      
-                      <i class="fa-regular fa-cart-plus"></i>
                       Carrinho
-                      <span class="badge-carrinho">{{ carrinhoService.obtemCarrinho().length }}></span>
+                      <i class="fa-solid fa-cart-shopping"></i>
+                   
+                      <span class=".badge-carrinho">{{ carrinhoService.obtemCarrinho().length}}></span>
   
                   </a>
               </li>
@@ -28,8 +24,9 @@
               <li><a><i class="fa-brands fa-linkedin"></i> </a></li>
           </ul>
       </nav>
+      <form class=".search-form">
+        <input type="text">
+        <button><i class="fa-solid fa-magnifying-glass"></i></button>
+      </form>
     </div>
     </header>
-<div class="container">
-    <app-header></app-header>
-</div>
