--- a/src/app/produtos/produtos.component.html
+++ b/src/app/produtos/produtos.component.html
@@ -1,6 +1,6 @@
 <section class = " product-list">
     <div class = " product-list__card" *ngFor="let produto of produtos">
-        rounterLink="/produtos/{{produto.id}}" class="product-list__link">
+       <a routerLink="produtos/{{produto.id}}" class="product-list__link">
             <img [src]="produto.imagem">
             <h2 class="product-item__name">
                 {{produto.descricao}}
@@ -12,7 +12,7 @@
                 {{produto.descricaoPreco}}
             </p>
             <button class="product-item__buy-button" type="button">Comprar</button>
-       
+        </a>
 
     </div>
 </section>
