--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,8 +6,8 @@
       <nav class="main-header__menu">
           <ul>
               <li>
-                  <a>Produtos</a><a routerLink="/produtos">Produtos</a>
-              </li>
+<a routerLink="/produtos">Produtos</a>
+            </li>
               <li>
                   <a>
                       Carrinho
